# dog-beach-claude

./: .gitignore  CLAUDE.md  README.md  compare.html  detail.html  find.html  index.html  oc_beaches_ccc.csv  oc_beaches_ccc.geojson  or_beaches_ingest.sql  paywall.html
admin/: _tier2_picklist.md  active-map.html  active_locations.json  arena-map.html  beach-editor.html  beach-operator-editor.html  beaches-all-map.html  ccc-map.html  cpad-unit-policy-map.html  cpad-unit-policy-viewer.html  daily-refresh.html  dedupe-review.html  duplicates.html  geocode-review.html  gold-set-curator-v3.html  gold-set-curator.html  index.html  location-editor.html  monterey-map.html  oc-beach-sand-polygons.html  operators-map.html  operators-oc-map.html  osm-beaches-by-operator.html  osm-map.html  poi-spotcheck.html  policy-research.html  staging-editor.html
docs/: PIPELINE_WRITEUP.md  POLICY_RESEARCH_MIGRATION.md  PROCESS_TRACKER.md  operator_dog_policy_extraction_eval.md
scripts/: add_state_to_csv.py  apply_access_deny_flags.py  audit_datasets.py  build_curator_data.py  bulk_promote_socal.py  discover_park_pages.py  extract_beach_policies.py  extract_cdpr_master_pet_table.py  extract_cpad_unit_dog_policy.py  extract_for_gold_v3.py  extract_for_orphans.py  extract_from_park_url.py  extract_operator.py  extract_operator_dogs_policy.py  flag_review_beaches.py  geocode_ca_beaches.py  load_counties_shapefile.py  load_cpad.py  load_cpad_recovery.py  load_cpad_shapefile.py  (+27 more)
scripts/dagster/dog_beach/: .gitignore  README.md  pyproject.toml
scripts/dagster/dog_beach/dog_beach/: definitions.py  resources.py
scripts/dagster/dog_beach/dog_beach/assets/: __init__.py  arena.py  consumer_pipeline.py  dbt_assets.py  external_sources.py  frontend.py  gold.py  ingest.py  verdicts.py
(+498 files in other folders)
